--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@
 
 .header__menu-item {
     font-size: 18px;
+    font-family: Raleway;
 }
 
 .header__menu-item_active {
@@ -49,6 +50,7 @@
 .address__list-item {
     font-size: 18px;
     font-style: normal;
+    font-family: Raleway;
 }
 
 .cover {
@@ -75,6 +77,7 @@
 .cover__title {
     position: relative;
     width: 1000px;
+    font-family: Raleway;
     font-weight: 700;
     font-size: 100px;
     text-transform: uppercase;
@@ -107,6 +110,7 @@
 }
 
 .cover__description-text {
+    font-family: Raleway;
     font-weight: 400;
     font-size: 22px;
     line-height: 127%;
@@ -119,7 +123,7 @@
     border: 1px solid #fff;
     width: 256px;
     height: 51px;
-    font-family: var(--font-family);
+    font-family: Raleway;
     font-weight: 500;
     font-size: 22px;
     text-transform: uppercase;
@@ -135,6 +139,7 @@
 }
 
 .lots__heading {
+    font-family: Raleway;
     font-weight: 700;
     font-size: 40px;
     text-transform: uppercase;
@@ -162,6 +167,7 @@
 }
 
 .card__title {
+    font-family: Raleway;
     font-weight: 700;
     font-size: 22px;
     line-height: 120%;
@@ -175,6 +181,7 @@
 }
 
 .card__text {
+    font-family: Raleway;
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
@@ -247,6 +254,7 @@
 }
 
 .about__title {
+    font-family: Raleway;
     font-weight: 700;
     font-size: 40px;
     text-transform: uppercase;
@@ -257,6 +265,7 @@
 .about__text {
     display: flex;
     flex-direction: column;
+    font-family: Raleway;
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
@@ -289,6 +298,7 @@
 
 .footer__menu-list-item {
     text-transform: lowercase;
+    font-family: Raleway;
 }
 
 .footer__menu-link_active {
