--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@
 .cover {
   position: relative;
   width: 1100px;
+  height: 757px;
   background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
