--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,8 @@
 .header__logo {
   width: 129.11px;
   height: 104.65px;
-  margin: auto;
+  margin-right: 184px;
+  margin-left: 36.52px;
 }
 
 .header__menu {
@@ -118,6 +119,7 @@
   text-transform: uppercase;
   color: #fff;
   word-spacing: 20px;
+  align-self: center;
 }
 
 .bet-button {
@@ -145,6 +147,7 @@
   font-size: 40px;
   text-transform: uppercase;
   color: #000;
+  margin-left: 40px;
 }
 
 .lots__card-list {
@@ -251,7 +254,7 @@
   width: 693px;
   height: 462px;
   margin-top: 133px;
-  margin-left: 36px;
+  margin-left: 30px;
 }
 
 .about__title {
@@ -317,6 +320,7 @@
   justify-content: space-evenly;
   width: 240px;
   height: 48px;
+  gap: 48px;
   list-style: none;
 }
 
