--- a/styles/style.css
+++ b/styles/style.css
@@ -1,30 +1,26 @@
 .header {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  align-items: center;
-  justify-items: center;
-  width: 1100;
-  height: 293;
+  display: flex;
+  width: 1100px;
   padding: 92px 50px 96px 50px;
 }
 
 .header__logo {
-  width: 129.11px;
-  height: 104.65px;
+  width: 148px;
+  height: 105px;
   margin-right: 184px;
   margin-left: 36.52px;
 }
 
 .header__menu {
-  width: 391.48px;
-  height: 22px;
+  min-width: 391.48px;
+  margin-top: 41px;
 }
 
 .header__menu-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 13px;
   list-style: circle;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .header__menu-link {
@@ -37,27 +33,23 @@
 
 .header__menu-item {
   font-size: 18px;
-  font-family: Raleway;
 }
 
 .header__menu-item_active {
   list-style: none;
 }
 
-.address__list {
+.address {
+  height: 24px;
   list-style: none;
-}
-
-.address__list-item {
   font-size: 18px;
   font-style: normal;
-  font-family: Raleway;
 }
 
 .cover {
   position: relative;
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
@@ -74,6 +66,7 @@
   right: 0;
   left: 0;
   bottom: 0;
+  z-index: 0;
 }
 
 .cover__title {
@@ -106,7 +99,6 @@
   flex-direction: row;
   justify-content: space-between;
   width: 1000px;
-  height: 51px;
   margin-top: 106px;
   z-index: 1;
 }
@@ -124,8 +116,8 @@
 
 .bet-button {
   border: 1px solid #fff;
-  width: 256px;
-  height: 51px;
+  min-width: 256px;
+  min-height: 51px;
   font-family: Raleway;
   font-weight: 500;
   font-size: 22px;
@@ -137,7 +129,6 @@
 
 .lots {
   width: 1052px;
-  height: 723px;
   margin: 180px 24px 120px 24px;
 }
 
@@ -153,8 +144,6 @@
 .lots__card-list {
   display: grid;
   grid-template-columns: repeat(3, 334px);
-  justify-items: center;
-  align-items: center;
   list-style: none;
   gap: 25px;
   margin-bottom: 30px;
@@ -163,21 +152,34 @@
 
 .lots__card-list-item {
   position: relative;
+  padding: 0 40px;
+  margin-left: -48px;
+}
+
+.card {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 596px;
+  min-height: 596px;
+  min-width: 334px;
+  background-size: cover;
+  background-position: center;
   padding: 0 40px;
 }
 
+.card-link {
+  text-decoration: none;
+}
+
 .card__title {
+  align-content: flex-start;
   font-family: Raleway;
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
   text-transform: uppercase;
   text-decoration: underline;
-  text-decoration-skip-ink: none;
   color: #fff;
   margin-top: 48px;
   text-align: left;
@@ -185,31 +187,27 @@
 }
 
 .card__text {
+  align-content: flex-end;
   font-family: Raleway;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
   color: #fff;
   margin-bottom: 48px;
+  text-align: left;
   z-index: 1;
 }
 
 .card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-  background-position: center;
+  background-image: url(/Users/echolalialia/dev/ono-tebe-nado/images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-  background-position: center;
+  background-image: url(/Users/echolalialia/dev/ono-tebe-nado/images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
-  background-position: center;
+  background-image: url(/Users/echolalialia/dev/ono-tebe-nado/images/card-lot-03.jpg);
 }
 
 .lots__look-more-link {
@@ -251,8 +249,7 @@
 }
 
 .about__auction {
-  width: 693px;
-  height: 462px;
+  max-width: 693px;
   margin-top: 133px;
   margin-left: 30px;
 }
@@ -285,14 +282,8 @@
   align-items: center;
   justify-items: center;
   width: 1100px;
-  height: 180px;
   margin-top: 180px;
   padding: 1px 50px 82px 50px;
-}
-
-.footer__menu {
-  width: 163.9px;
-  height: 64px;
 }
 
 .footer__menu-list {
@@ -310,16 +301,12 @@
 }
 
 .footer__social {
-  width: 240px;
-  height: 48px;
   margin-right: 50px;
 }
 
 .footer__social-list {
   display: flex;
   justify-content: space-evenly;
-  width: 240px;
-  height: 48px;
   gap: 48px;
   list-style: none;
 }
